<resources>
    <string name="app_name">TODO App</string>
    <string name="add_todo_item">Add TODO Item</string>
    <string name="hint_todo_item">TODO Item Title</string>
    <string name="button_add">Add TODO Item</string>
    <string name="channel_name">ToDoList Notification Channel</string>
    <string name="channel_description">Channel for notifications</string>
    <string name="content_todo_item">TODO Item Content</string>
    <string name="due_todo_item">TODO Item Due Date &amp; Time</string>
    <string name="complete_checkbox">Completed?</string>
    <string name="empty_not_saved">Word not saved because it is empty.</string>
    <string name="successfully_saved">Todo Item Successfully Added.</string>
    <string name="title_activity_todo_detail">todo_detail</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="username">User name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_todo_item_details">todo_item_details</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment.</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="click_button_to_add_todo_item">Click + button to add TODO Item</string>

</resources>