<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/todo_item_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/min_height"
        android:fontFamily="sans-serif-light"
        android:hint="@string/hint_todo_item"
        android:theme="@style/Theme.App.Base"
        android:inputType="textAutoComplete"
        android:layout_margin="@dimen/big_padding"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/todo_item_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/min_height"
        android:fontFamily="sans-serif-light"
        android:hint="@string/content_todo_item"
        android:theme="@style/Theme.App.Base"
        android:inputType="textMultiLine"
        android:layout_margin="@dimen/big_padding"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="69dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/todo_item_due"
            android:layout_width="198dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/big_padding"
            android:fontFamily="sans-serif-light"
            android:hint="--/--/---- 00:00 AM/PM"
            android:inputType="textAutoComplete"
            android:minHeight="@dimen/min_height"
            android:textSize="18sp" />

        <Button
            android:id="@+id/dateTimeButton"
            android:layout_width="143dp"
            android:layout_height="38dp"
            android:layout_marginTop="20dp"
            android:background="@color/design_default_color_primary"
            android:text="Date / Time"
            android:textAlignment="center"
            android:textColor="@color/buttonLabel" />
    </LinearLayout>

    <Button
        android:id="@+id/button_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/big_padding"
        android:background="@color/design_default_color_primary"
        android:text="@string/button_add"
        android:textColor="@color/buttonLabel" />

</LinearLayout>